--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="index.html">Download Excursion (Comings soon!)</a></p>
+    <p><video src="resources\videos\excursion.mp4" autoplay loop muted>
+
+    </video> </p>
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p><a href="index.html">Download Excursion (Comings soon!)</a></p>
   </body>
 </html>
