--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </video> </p>
     <h1>Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources\images\camp.jpg" alt="Tent"></p>
+    <p><img src="resources\images\phone.png" alt="Illustration of phone"></p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p><a href="index.html">Download Excursion (Comings soon!)</a></p>
   </body>
