--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Excursion</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
-  </head>
-  <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a href="index.html" class="link">Download Excursion (Comings soon!)</a></p>
-    <p><video src="resources\videos\excursion.mp4" autoplay loop muted>
+
+<head>
+  <meta charset="utf-8">
+  <title>Excursion</title>
+  <link rel="stylesheet" href="./resources/css/style.css">
+</head>
+
+<body>
+  <h1>Discover hidden places in the world around you</h1>
+  <p><a href="index.html" class="link">Download Excursion (Comings soon!)</a></p>
+  <p><video src="resources\videos\excursion.mp4" autoplay loop muted>
 
     </video> </p>
-    <h1>Your personal travel guide</h1>s
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="resources\images\camp.jpg" alt="Tent"></p>
-    <p><img src="resources\images\phone.png" alt="Illustration of phone"></p>
-    <h1>Coming Soon for iPhone and Android</h1>
-    <p><a href="index.html" class="link">Download Excursion (Comings soon!)</a></p>
-  </body>
+  <h1>Your personal travel guide</h1>s
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p><img src="resources\images\camp.jpg" alt="Tent"></p>
+  <p><img src="resources\images\phone.png" alt="Illustration of phone"></p>
+  <h1>Coming Soon for iPhone and Android</h1>
+  <p><a href="index.html" class="link">Download Excursion (Comings soon!)</a></p>
+  <p class="watermark">&copy; Excursion</p>
+</body>
+
 </html>
